# Pre-Strategy-Intervention

./: README.md  pyproject.toml
baselines/IPPO/: ippo_pre.py
baselines/IPPO/agent/: ippo_agent.py
baselines/IPPO/agent/gnn_module/: hanabi_gnn.py  mpe_gnn.py
baselines/IPPO/agent/pre_policy_module/: pre_policy_network.py
baselines/IPPO/config/alg/: base_marl_ippo.yaml  intrinsic_reward_ippo.yaml  ippo.yaml
baselines/MAPPO/: mappo_pre.py  mappo_pre_seed.py
baselines/MAPPO/agent/: mappo_agent.py
baselines/MAPPO/agent/gnn_module/: __init__.py  hanabi_gnn.py
baselines/MAPPO/agent/pre_policy_module/: pre_policy_network.py
baselines/MAPPO/config/: config.yaml
baselines/MAPPO/config/alg/: base_marl_mappo.yaml  intrinsic_reward_mappo.yaml  mappo.yaml
baselines/QLearning/: iql_pre.py  pqn_iql_pre.py  pqn_vdn_pre.py  qmix_pre.py  vdn_pre.py
baselines/QLearning/agent/: iql_agent.py  pqn_agent.py
baselines/QLearning/agent/gnn_module/: hanabi_4_player_gnn.py  hanabi_gnn.py  mpe_gnn.py
baselines/QLearning/agent/pre_policy_module/: pre_policy_network.py
baselines/QLearning/config/: config.yaml
baselines/QLearning/config/alg/: base_marl_iql.yaml  base_marl_pqn.yaml  base_marl_qmix.yaml  base_marl_vdn.yaml  baseline_heter_iql.yaml  heter_iql.yaml  intrinsic_reward_iql.yaml  intrinsic_reward_pqn.yaml  intrinsic_reward_qmix.yaml  intrinsic_reward_vdn.yaml  iql.yaml  iql_scenario_2.yaml  pqn.yaml  qmix.yaml  vdn.yaml  vdn_scenario_2.yaml
jaxmarl/: registration.py
jaxmarl/environments/: __init__.py
jaxmarl/environments/hanabi/: hanabi.py  hanabi_game.py
jaxmarl/environments/mpe/: __init__.py  augmented_mpe.py  simple.py  simple_spread.py
jaxmarl/wrappers/: baselines.py
(+1 files in other folders)
