
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['jaxmarl*']

[tool.setuptools.dynamic]
version = {attr = "jaxmarl.__version__"}

[project]
name = "jaxmarl-pre-strategy-intervention"
readme = "README.md"
description = "Pre-strategy Intervention in Multi-Agent Reinforcement Learning with JAX" # <---【建议修改】
authors = [
    {name = "Anjie Liu", email = "anjie.liu@connect.hkust-gz.edu.cn"},
  ]
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "jax==0.4.25",
  "flax==0.8.4",
  "safetensors",
  "chex==0.1.86",
  "brax==0.10.3",
  "mujoco==3.1.3",
  "matplotlib",
  "pillow",
  "scipy==1.12.0",
  "gymnax==0.0.9",
  "numba==0.61.2",
]

[project.optional-dependencies]
algs = [
  "optax==0.2.2",
  "distrax==0.1.5",
  "flashbax==0.1.0",
  "wandb==0.21.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pettingzoo==1.25.0",
  "tqdm>=4.67.1",
]
dev = [
  "pytest",
  "pygame",
]

[project.urls]
#"Homepage" = "https://github.com/FLAIROx/JaxMARL"
#"Bug Tracker" = "https://github.com/FLAIROx/JaxMARL/issues"
